--- a/pages/submissions/assets/css/style.css
+++ b/pages/submissions/assets/css/style.css
@@ -4,3 +4,27 @@
                  1px -1px 2px rgba(0, 0, 0, 0.3),
                  -1px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
+.Inknut {
+    font-family: Inknut Antiqua;
+}
+
+
+.lightblue {
+    background-color: #1877F2;
+}
+
+#lightGrey {
+    background-color: #F8F8F8;
+}
+.lightGrey {
+    background-color: #F8F8F8;
+}
+
+.darkgrey {
+    background-color: #D9D9D9;
+}
+
+.darkblue {
+    background-color: #03396C;
+}
